# gsound

./: Makefile.am  README  README.md  autogen.sh  configure.ac  gsound.doap
docs/: Makefile.am  gsound-docs.sgml
gsound/: GSound-1.0.metadata  Makefile.am  gsound-attr.h  gsound-context.c  gsound-context.h  gsound.c  gsound.h  gsound.pc.in
test/: Makefile.am  test-c.c  test-gjs.js  test-py.py  test-vala.vala
tools/: Makefile.am  gsound-play.vala
